remove unnecesary css z-index for tab, and fix for jquery unit test

--- a/themes/standard_theme/english.lproj/tab.css
+++ b/themes/standard_theme/english.lproj/tab.css
@@ -13,7 +13,3 @@
 .sc-theme .sc-tab-view .sc-tab-view {
   background-color: transparent;
 }
-
-.sc-theme .sc-tab-view > .sc-segmented-view{
-  z-index: 100;
-}
